[package]
name = "gardener-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
clap = { version = "4.5.29", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
regex = "1.11.1"
tokio = { version = "1.43.0", features = ["full"] }
